--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,10 +1,6 @@
 * {
     font-size: 18px;
 }
-.Container {
-    text-align: center;
-}
-
 .btn-outline-primary,
 .btn-outline-success {
     margin-left: 20px !important;
@@ -12,7 +8,7 @@
 }
 
 .form-label {
-    margin: 0px;
+    margin-left: 0px;
 }
 
 .form-label,
@@ -34,13 +30,11 @@
 .alert-danger {
     color: red;
     margin-top: 18px;
-    /* background-color: #fff !important; */
     border: 0px;
 }
 
 .alert-success {
     color: green;
     margin-top: 18px;
-    /* background-color: #fff !important; */
     border: 0px;
 }
