--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,10 +1,6 @@
 * {
     font-size: 18px;
 }
-.Container {
-    text-align: center;
-}
-
 .btn-outline-primary,
 .btn-outline-success {
     margin-left: 20px !important;
@@ -12,12 +8,12 @@
 }
 
 .form-label {
-    margin: 0px;
+    margin-left: 0px;
 }
 
 .form-label,
 .form-control {
-    margin-bottom: 25px !important;
+    margin-bottom: 25px;
     padding-right: 0 !important;
 }
 
@@ -34,13 +30,17 @@
 .alert-danger {
     color: red;
     margin-top: 18px;
-    /* background-color: #fff !important; */
     border: 0px;
 }
 
 .alert-success {
     color: green;
     margin-top: 18px;
-    /* background-color: #fff !important; */
     border: 0px;
+}
+
+.panel {
+    box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.3);
 }
