--- a/src/assets/css/userComponent.css
+++ b/src/assets/css/userComponent.css
@@ -4,7 +4,7 @@ body{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     height: 100px;
-    background: lightgray;
+    /* background: white; */
 }
 
 .profile-down img{
